--- a/passionproj.css
+++ b/passionproj.css
@@ -39,11 +39,12 @@ ul li a:hover{
  } 
 
  .div1{
-   background-color: white;
+   background-color:rgb(231, 224, 224);
    text-align: center;
    position: sticky;
    top:0px;
    width:100%;
+   padding-top: 10px;
  }
    
 .div2{
@@ -64,18 +65,34 @@ ul li a:hover{
     }
     
 
-    .div3{
-      background-color: tan;
-      color:rgba(216, 86, 86, 0.856)
+
+
+    .div4{
       float: left;
       font-family: Roboto Thin;
-      color: white;
+      color:rgba(216, 86, 86, 0.856);
       font-size:x-large;
-      margin-right: 50px;
-      padding-top: 375px;
+      padding-top:350px;
+      padding-left:50px;
+      padding-right:50px;
+    }
+
+    .div5{
+      float: left;
+      font-family: Roboto Thin;
+      color: rgba(216, 86, 86, 0.856);
+      font-size:x-large;
+      padding-top: 150px;
+      padding-left:50px;
+       padding-right:50px;
     }
 
     .pic1{
       float: left;
     }
+
+    .pic2{
+      Float:right;
+    }
     
+
