--- a/styles/threatred.css
+++ b/styles/threatred.css
@@ -87,3 +87,33 @@ tr.tr1{
 u{
   text-decoration-color:black ;
 }
+
+.scroll-left {
+  height: 50px;	
+  overflow: hidden;
+  position: relative;
+  background: white;
+  color: black;
+  border: 1px solid white;
+ }
+ .scroll-left p {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  line-height: 50px;
+  text-align: center;
+  /* Starting position */
+  transform:translateX(100%);
+  /* Apply animation to this element */
+  animation: scroll-left 15s linear infinite;
+ }
+ /* Move it (define the animation) */
+ @keyframes scroll-left {
+  0%   {
+  transform: translateX(5%); 		
+  }
+  100% {
+  transform: translateX(-70%); 
+  }
+ }
