--- a/styles/other.css
+++ b/styles/other.css
@@ -100,3 +100,10 @@ ul li a:hover{
     padding-left: 20px;
 
   }
+
+  a{
+    text-decoration: none;
+    color: black;
+    text-decoration: underline;
+    font-weight: bold;
+  }
