--- a/styles/threatred.css
+++ b/styles/threatred.css
@@ -1,3 +1,6 @@
+@font-face { font-family: Roboto Thin; 
+  src: url('../resources/Roboto-Thin.ttf'); } 
+
 body{
   background-color:white;
 }           
