--- a/styles/uhelpred.css
+++ b/styles/uhelpred.css
@@ -29,7 +29,7 @@ ul li a{
   font-size: x-large;
   font-family: Roboto Thin;
   color:rgba(216, 86, 86, 0.856);
-  padding: 20px 20px;
+  padding: 20px;
   font-weight: 900;
 } 
 
@@ -93,32 +93,3 @@ u{
 }
 
 
-.scroll-left {
-  height: 50px;	
-  overflow: hidden;
-  position: relative;
-  background: white;
-  color: black;
-  border: 1px solid white;
- }
- .scroll-left p {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  line-height: 50px;
-  text-align: center;
-  /* Starting position */
-  transform:translateX(100%);
-  /* Apply animation to this element */
-  animation: scroll-left 15s linear infinite;
- }
- /* Move it (define the animation) */
- @keyframes scroll-left {
-  0%   {
-  transform: translateX(50%); 		
-  }
-  100% {
-  transform: translateX(-70%); 
-  }
- } 
